--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -1,10 +1,94 @@
-/*
-Colors to use:
-dark blue: #06365f
-light blue: #1c5380
-*/
+/* 
 
+Colors to use: 
+
+dark blue: #06365f 
+
+light blue: #1c5380 
+
+*/ 
+
+* {
+  margin: 0;
+  padding: 0;
+}
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url(../images/bgtile.png);
+  background-repeat: repeat-x;
+}
+main {
+  display: flex;
+  justify-content: center;
+}
+.contenidoprincipal {
+  width: 1000px;
+  margin-top: 100px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+.imagentelefonos {
+  height: 550px;
+}
+.texto {
+  width: 500px;
+}
+.titulo {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+.marcodeltexto {
+  padding: 20px;
+  background-image: url(../images/frame.png);
+  background-size: cover;
+}
+.boton {
+  width: 80px;
+  background-color: #1c5380;
+  border: 1px solid;
+  border-color: #06365f;
+  display: flex;
+  justify-content: space-between;
+  color: white;
+  padding: 15px 32px;
+  margin-top: 10px;
+}
+.marcodeltexto h1 {
+  color: #1c5380;
+  padding-bottom: 30px;
+}
+.marcodeltexto p {
+  padding-bottom: 15px;
+}
+.appStores {
+  margin-top: 30px;
+  display: flex;
+  justify-content: space-around;
+}
+.footer {
+  margin: 50px;
+  align-self: center;
+  height: 50px;
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: center;
+}
+.elementolista {
+  list-style-type: none;
+  width: auto;
+  height: 100px;
+  font-weight: bold;
+  margin: 5px;
+  color: #06365f;
+}
+.elementolistaExtra {
+  list-style-type: none;
+  width: auto;
+  height: 100px;
+  font-weight: bold;
+  margin: 5px;
+  color: lightgrey;
 }
