--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -3,8 +3,80 @@ Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
-
+*{
+  margin:0;
+  padding: 0;
+}
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-color: #f5f6f8;
+}
+.bg1{
+  background-color: #3f729b;
+  height: 30vh;
+}
+.bg2{
+  background-color: #f5f6f8;
+  height: 60vh;
+}
+section{
+  display: flex;
+  justify-content: center;
+  margin-top:70px;
+  position: absolute;
+  top:0;
+}
+.info{
+  width: 40%;
+}
+.info div{
+  margin:0 30px;
+}
+.text{
+  border-radius: 10px;
+  background-image:url("../images/frame.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  padding: 2em;
+}
+.text p{
+  margin-bottom: 20px;
+}
+h2{
+  color:#06365f;
+}
+.brand{
+  width: 200px;
+}
+.top{
+  display: flex;
+  justify-content: space-between;
+  margin-bottom:20px;
+}
+.top button{
+  height: 30px;
+  border-radius: 3px;
+  border: 1px solid #396990;
+  background-color: #4782b1;
+  color: #f5f6f8;
+  padding: 6px 11px;
+}
+button img{
+  width:15px;
+}
+footer{
+  background-color: #f5f6f8;
+  color: #06365f;
+  text-align: center;
+}
+footer li{
+  text-transform: uppercase;
+  font-size: 12px;
+  font-weight: bold;
+  display: inline;
+  margin:10px;
+}
+.copy{
+  color: gray;
 }
