--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -46,6 +46,11 @@ body {
 
 .footer{
   text-align: center;
+  display: inline-block;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .footer p{
