--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,48 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background: url('../images/bgtile.png');
+  background-repeat: repeat-x;
+}
+
+main{
+  max-width: 900px;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: 40% 60%;
+  padding: 7rem 0 0 0;
+}
+
+.phones{
+
+}
+
+/* .rightSide{
+    background-image: url('../images/frame.png');
+    background-repeat: no-repeat;
+} */
+
+footer {
+  font-size: 0.825rem;
+  text-align: center;
+  margin: 2rem 0;
+}
+footer ul li {
+  list-style: none;
+  display: inline;
+  text-transform: uppercase;
+  font-weight: 600;
+  margin: 0 0.75rem;
+}
+
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 350px;
+}
+
+.up{
+  background-image: url('../images/frame.png');
+  background-repeat: no-repeat;
 }
