--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -3,8 +3,101 @@ Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
-
+ 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
-}
+  background-image: linear-gradient(#1c5380 40%, #06365f 50%, white 50%);
+  background-repeat: no-repeat;
+  background-size: cover;
+ }
+ .azul {
+  margin: 10%;
+ }
+ .cont {
+  margin: 0 auto;
+ }
+ .c1 {
+  display: inline-block;
+  padding-right: 50px;
+ }
+  
+ .c2 {
+  display: inline-block;
+  width: 50%;
+  padding: 0;
+ }
+  
+ .c2-2 {
+  position: relative;
+  top: 50%;
+ }
+  
+ .centered {
+  position: absolute;
+  top: 70%;
+  left: 40%;
+  transform: translate(-50%, -50%);
+  
+ }
+ p {
+  padding: 3px 0;
+ }
+  
+ h1 {
+  color: #06365f;
+ }
+  
+ .brand {
+  padding-right: 20px;
+ }
+ .boton {
+   -moz-box-shadow:inset 0px 0px 0px 0px #1c5380;
+   -webkit-box-shadow:inset 0px 0px 0px 0px #1c5380;
+   box-shadow:inset 0px 0px 0px 0px #1c5380;
+   background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #1c5380), color-stop(1, #06365f));
+   background:-moz-linear-gradient(top, #1c5380 5%, #06365f 100%);
+   background:-webkit-linear-gradient(top, #1c5380 5%, #06365f 100%);
+   background:-o-linear-gradient(top, #1c5380 5%, #06365f 100%);
+   background:-ms-linear-gradient(top, #1c5380 5%, #06365f 100%);
+   background:linear-gradient(to bottom, #1c5380 5%, #06365f 100%);
+   filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#6981b5', endColorstr='#06365f',GradientType=0);
+   background-color:#1c5380;
+   -moz-border-radius:4px;
+   -webkit-border-radius:4px;
+   border-radius:4px;
+   border:1.5px solid #06365f;
+   display:inline-block;
+   cursor:pointer;
+   color:#ffffff;
+   font-family:Arial;
+   font-size:13px;
+   font-weight:bold;
+   padding:5px 12px;
+  text-decoration:none;
+  position: absolute;
+  top: 253px;
+ }
+ .boton:hover {
+   background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #11398a), color-stop(1, #6981b5));
+   background:-moz-linear-gradient(top, #11398a 5%, #6981b5 100%);
+   background:-webkit-linear-gradient(top, #11398a 5%, #6981b5 100%);
+   background:-o-linear-gradient(top, #11398a 5%, #6981b5 100%);
+   background:-ms-linear-gradient(top, #11398a 5%, #6981b5 100%);
+   background:linear-gradient(to bottom, #11398a 5%, #6981b5 100%);
+   filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#11398a', endColorstr='#6981b5',GradientType=0);
+   background-color:#06365f;
+ }
+  
+ .footer {
+  text-align: center;
+  color: darkgrey;
+ }
+  
+ a {
+  padding: 0 7px;
+  text-decoration: none;
+  font-weight: bold;
+  color: #06365f;
+ }
+ 
