--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,35 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+
+
+}
+.div section{
+  background-color: #1c5380;
+  height: 1000px;
+}
+.nav-bar {
+  height: 40px;
+  padding: 14px 0;
+}
+
+.nav-bar-ul {
+  margin: 0 auto;
+  width: 1200px;
+  display: flex;
+  justify-content: space-evenly;
+}
+.nav-bar-item {
+  color: #1c5380;
+  text-decoration: none;
+}
+.nav-bar ul li {
+  float: center;
+  list-style-type: none;
+  text-align: center;
+  width: 33%;
+}
+
+h2{
+  color:#06365f;
 }
