--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -4,7 +4,115 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: content-box;
+}
+
+html {
+  font-size: 15px;
+}
+
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background: linear-gradient(to bottom, #5489b4 0%, #1c5380 35%, white 35%, white 100%);
+}
+
+#main {
+  display: flex;
+  flex-direction: row;
+  padding: 100px 100px 50px 100px;
+}
+
+#left-image {
+  padding: 20px;
+}
+
+#right-content {
+  padding: 20px;
+}
+
+#brand-container {
+  width: 470px;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 15px;
+}
+
+#login-button {
+  height: 40px;
+  margin: 15px 0;
+  color: white;
+  width: 100px;
+  font-size: 15px;
+  border: none;
+  box-shadow: 1px 1px 2px #06365f;
+  background: linear-gradient(to bottom, #5489b4 0%, #1c5380 100%);
+}
+
+#presentation {
+  width: 400px;
+  height: 200px;
+  background-image: url(../images/frame.png);
+  background-size: cover;
+  padding: 20px 40px;
+}
+
+#presentation>h1 {
+  width: 300px;
+  font-size: 1.4rem;
+  color: #06365f;
+  margin: 10px 0;
+}
+
+#presentation>p {
+  margin: 20px 0;
+}
+
+#brand-container {
+  display: flex;
+  justify-content: space-between;
+}
+
+footer {
+  display: flex;
+  justify-content: center;
+  padding-top: 15px;
+}
+
+#bottom-navbar {
+  height: 100px;
+  display: flex;
+}
+
+#bottom-navbar ul {
+  display: flex;
+}
+
+#bottom-navbar ul li {
+  list-style-type: none;
+  padding: 0 10px;
+}
+
+#bottom-navbar ul li a {
+  text-decoration: none;
+  font-size: 1rem;
+  font-weight: 600;
+  color: #1c5380;
+  text-transform: uppercase;
+}
+
+#copyright {
+  padding: 0 10px;
+}
+
+#download-apps {
+  margin-top: 40px;
+}
+
+#download-apps>a {
+  padding-right: 10px;
 }
