--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -3,8 +3,119 @@ Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
+* {
+  margin: 0;
+  padding: 0;
+}
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url(../images/bgtile.png);
+  background-repeat: repeat-x;
+}
+
+a {
+  color: #06365f;
+  text-decoration: none;
+}
+
+img {
+  width: 100%;
+}
+
+
+.imgPhone {
+  width: 300px;
+}
+
+.imgBrand {
+  width: 200px;
+}
+
+.imgHome {
+  width: 30px;
+
+
+}
+
+.imgIphone {
+  width: 100px;
+}
+
+.imgAnd {
+  width: 100px;
+}
+
+main {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  justify-content: space-around;
+  flex-direction: column;
+  border: 2px solid blueviolet;
+
+}
+
+#index {
+  width: 70vw;
+  height: 60vh;
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  border: 2px solid blueviolet;
+}
+
+aside {
+
+  border: 2px solid yellow;
+
+}
+
+.content {
+  width: 40vw;
+  height: 55vh;
+
+  border: 2px solid green;
+}
+
+.logo {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+button {
+  width: 6vw;
+  border-radius: 8px;
+
+  display: inline-block;
+
+}
+
+article {
+  height: 40vh;
+  background-image: url(../images/frame.png);
+  background-size: cover;
+  background-position: center;
+
+  border: 2px solid palevioletred;
+}
+
+
+.app {
+  width: 20vw;
+  height: 8vh;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border: 2px solid green;
+}
+
+footer {
+  border: 2px solid green;
 }
