--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -3,8 +3,113 @@ Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
-
+*{
+  box-sizing: border-box;
+}
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  height: 100vh;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items:flex-start;
+
+ 
+
 }
+div{
+  z-index: 2;
+}
+.titulos{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.login{
+  margin-left: 30%;
+  color:white;
+  display: flex;
+  align-items: center;
+  background-image: url("../images/bgtile.png");
+  background-size: contain;
+  background-repeat: repeat;
+
+}
+.login img{
+  margin-right: 10px;
+}
+div.left{
+  margin-top: 10%;
+}
+div.right{
+  margin-top: 10%;
+  width: 40%;
+  margin-left: 5%;
+}
+div.fondo {
+  z-index: 1;
+  width: 100%;
+  height: 100vh;
+  position: absolute;
+ 
+  
+}
+.azul{
+  height: 40%;
+  background-image: url("../images/bgtile.png");
+  background-size: cover;
+  background-repeat: repeat;
+}
+.text{
+  height: 40%;
+  padding: 5%;
+   background-image: url("../images/frame.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+strong{
+  font-weight: 600;
+  
+}
+h2{
+  color: #11385e;
+  font-size: 2em;
+  font-weight: 600;
+  margin-right: 30%;
+  margin-bottom:5%;
+  
+}
+p{
+  
+  font-size: 1em;
+  font-weight: 300;
+  margin-bottom: 3%;
+  
+}
+div.moviles{
+  margin-top:20px;
+}
+.moviles img{
+  margin-right: 15px;
+}
+
+footer{
+  width: 45%;
+  z-index: 2;
+  position: absolute;
+  color: #4b7296;
+  bottom: 5%;
+  text-transform: uppercase;
+  font-weight: 600;
+}
+footer ul{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.insta{
+  color: grey;
+  font-weight: 300;
+}
+
