--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -4,7 +4,63 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+* {
+  box-sizing: content-box;
+}
+
 body {
+  background-image: url("../images/bgtile.png");
+  background-repeat: repeat-x;
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+}
+
+section {
+  display: flex;
+}
+
+h1 {
+  color: #06365f;
+}
+
+button {
+  color: white;
+  font-weight: bold;
+  background-color: #1c5380;
+  border: 1px solid #06365f;
+}
+
+.container {
+  height: 300px;
+  width: 504px;
+  background-image: url("../images/frame.png");
+  background-repeat: no-repeat;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  padding: 35px;
+}
+
+.bold {
+  font-weight: bold;
+}
+
+footer {
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+}
+
+footer li {
+  color: darkgrey;
+  font-weight: bold;
+  text-transform: uppercase;
+  display: inline-block;
+  margin: 10px;
+}
+
+footer li a {
+  color: #1c5380;
+  text-decoration: none;
 }
