--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,61 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+.container {
+ background-image: url(./../images/bgtile.png);
+ background-repeat: repeat;
+}
+
+.phones {
+  /* display: flex; */
+  float: left;
+  width: 320px;
+  /* border: 1px solid black; */
+  margin-left: 300px;
+}
+
+.content {
+  width: 500px;
+  /* border: 1px solid black; */
+  background-repeat: no-repeat;
+  margin-left: 700px;
+  padding: 10px;
+}
+
+.content button {
+  background-color: #1c5380;
+  background-image: url(./../images/home.png);
+  background-repeat: no-repeat;
+  border-radius: 1px;
+}
+
+.back {
+  background-image: url(./../images/frame.png);
+}
+
+.content h1 {
+  font-size: 30px;
+  color: #06365f;
+  font-weight: bold;
+}
+
+.content p {
+  padding: 10px;
+}
+
+.content span {
+  font-weight: bold;
+}
+
+.footer {
+  /* border: 1px solid black; */
+  text-align: center;
+  color: #1c5380;
+  margin-top: 300px;
+}
+
+.footer a {
+  text-decoration: none;
+  color: #1c5380;
+}
