--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -4,7 +4,96 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+
 body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif; 
   margin: 0;
 }
+.color-band-bkg {
+  background-color: rgb(53, 105, 141);
+  height: 300px;
+}
+ .main-box {
+  margin: 0 auto;
+  width: 1000px;
+  height:520px;
+  margin-top: 100px;
+  padding: 100px 50px;
+  display: flex;
+  flex-direction: row;
+
+
+ }
+ .phone {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 318px;
+  box-sizing: border-box;
+  background-image: url("../images/phones.png");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+ }
+ .frame {
+  display: flex;
+  flex-direction: column;
+  
+  padding: 20px;
+ }
+ header {
+   display: flex;
+   flex-direction: row;
+   align-items: center;
+   justify-content: space-around;
+
+ }
+ header a {
+  background-color: #1c5380;
+  color: white;
+  text-decoration: none;
+  width: 80px;
+  padding: 10px;
+  border-radius: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: 10px;
+ }
+ .text-box {
+    display: flex;
+    flex-direction: column;
+    background-image: url("../images/frame.png");
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 505px;
+    
+    
+ }
+ .text-box p {
+   padding: 50px;
+ }
+ .app-stores {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  padding-right: 20px;
+ }
+
+ footer {
+   display: flex;
+   flex-direction: row;
+   justify-content: center;
+ }
+ footer ul {
+  display: flex;
+  flex-direction: row;
+  list-style-type: none;
+ }
+ footer li {
+   margin: 10px;
+   color: #06365f;
+ }
+
+
